spec_local/deployment_task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task
  namespace: slot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
        - name: task
          image: krpdkr/slot_task
          ports:
            - containerPort: 80
