spec_local/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template
  namespace: slot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template
  template:
    metadata:
      labels:
        app: template
    spec:
      containers:
        - name: template
          image: krpdkr/slot_template
          ports:
            - containerPort: 80
