spec_local/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-bazelgrpc
  namespace: bazelgrpc
spec:
  type: NodePort
  selector:
    app: gateway-bazelgrpc
  ports:
    - nodePort: 30000
      port: 8080
      targetPort: 3000
