spec_local/service_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: template
  namespace: slot
spec:
  selector:
    app: template
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
