spec_local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  namespace: slot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: slot.appp
      http:
        paths:
          - path: /frapp/?(.*)
            pathType: Prefix
            backend:
              service:
                name: frapp
                port:
                  number: 80
          - path: /gateway/?(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 3000
